fix: lot of fixes
